[gd_scene load_steps=8 format=3 uid="uid://binsjuq5kre2x"]

[ext_resource type="Script" uid="uid://dikpn2mcn4t31" path="res://scripts/start.gd" id="1_u80x2"]
[ext_resource type="FontFile" uid="uid://cl8ntpdrpicmf" path="res://assets/Born2bSportyV2.ttf" id="2_bodal"]
[ext_resource type="Texture2D" uid="uid://b7ao13g6xpiu6" path="res://assets/startBut.png" id="3_bodal"]
[ext_resource type="Texture2D" uid="uid://up5h4u65wvs3" path="res://assets/startButClicked.png" id="4_kdmts"]
[ext_resource type="Texture2D" uid="uid://dynidctfqr415" path="res://assets/exitBut.png" id="5_y16t7"]
[ext_resource type="Texture2D" uid="uid://okmfy0uyd3bg" path="res://assets/exitButClicked.png" id="6_4ge6i"]
[ext_resource type="Texture2D" uid="uid://c880o7vl0446e" path="res://assets/sky.png" id="7_4ge6i"]

[node name="start" type="Node2D"]
script = ExtResource("1_u80x2")

[node name="Label" type="Label" parent="."]
offset_left = -66.0
offset_top = 148.0
offset_right = 1159.0
offset_bottom = 428.0
pivot_offset = Vector2(280, 140)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -9
theme_override_constants/shadow_offset_y = 18
theme_override_constants/shadow_outline_size = 25
theme_override_fonts/font = ExtResource("2_bodal")
theme_override_font_sizes/font_size = 190
text = "Cyberchaos"
horizontal_alignment = 1

[node name="StartBut" type="TextureButton" parent="."]
offset_left = 412.0
offset_top = 600.0
offset_right = 667.99994
offset_bottom = 720.00006
texture_normal = ExtResource("3_bodal")
texture_pressed = ExtResource("4_kdmts")
ignore_texture_size = true
stretch_mode = 0

[node name="QuitBut" type="TextureButton" parent="."]
offset_left = 444.0
offset_top = 822.0
offset_right = 636.0
offset_bottom = 910.0
texture_normal = ExtResource("5_y16t7")
texture_pressed = ExtResource("6_4ge6i")
stretch_mode = 0

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(540, 540)
texture = ExtResource("7_4ge6i")

[connection signal="button_up" from="StartBut" to="." method="_on_start_but_button_up"]
[connection signal="pressed" from="StartBut" to="." method="_on_start_but_pressed"]
[connection signal="button_up" from="QuitBut" to="." method="_on_quit_but_button_up"]
[connection signal="pressed" from="QuitBut" to="." method="_on_quit_but_pressed"]
